# openMittsu

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .travis.yml.txt  CMakeLists.txt  Config.h.in  Example-client-configuration-file.ini  Example-contacts-file.txt  LICENSE  README.md  Version.cpp.in
appImage/: build.sh  openMittsu.appdata.xml  openMittsu.desktop
buildTools/versionInfo/: main.cpp
cmake/: AddImportedLibrary.cmake  FindLibqrencode.cmake  FindLibsodium.cmake  GetGitRevisionDescription.cmake  GoogleTest.cmake.in  RegisterSourceGroup.cmake  callwindeployqt.bat  cmake_make_unique.cpp  cmake_ptr_size.cpp
resources/: audio.qrc  fonts.qrc  icon.psd  icon.rc  icon_unread_message.psd  icons.qrc  sql.qrc
resources/sql/: CreateContactControlMessages.sql  CreateContactMessages.sql  CreateContacts.sql  CreateFeatureLevels.sql  CreateGroupMessages.sql  CreateGroups.sql  CreateMedia.sql  CreateSettings.sql  CreateTableVersions.sql  UpdateMediaToVersion2.sql
share/macosx/: Info.plist.cmake
src/: Base32.cpp  Base32.h  ChatTab.h  ChatTabWidget.cpp  ChatTabWidget.h  Client.cpp  Client.h  ClientConfiguration.cpp  ClientConfiguration.h  Contact.cpp  Contact.h  ContactListWidgetItem.cpp  ContactListWidgetItem.h  ContactRegistry.cpp  ContactRegistry.h  Endian.cpp  Endian.h  ExceptionHandlingApplication.cpp  ExceptionHandlingApplication.h  GroupContact.cpp  GroupContact.h  IdentityContact.cpp  IdentityContact.h  IdentityHelper.cpp  IdentityHelper.h  Init.h  Key.h  KeyPair.cpp  KeyPair.h  KnownIdentities.cpp  KnownIdentities.h  MessageCenter.cpp  MessageCenter.h  MissingIdentityProcessor.cpp  MissingIdentityProcessor.h  Pkcs7.cpp  Pkcs7.h  ProtocolClient.cpp  ProtocolClient.h  PublicKey.cpp  (+7 more)
src/acknowledgments/: AcknowledgmentProcessor.cpp  AcknowledgmentProcessor.h  ContactMessageAcknowledgmentProcessor.cpp  ContactMessageAcknowledgmentProcessor.h  GroupContentMessageAcknowledgmentProcessor.cpp  GroupContentMessageAcknowledgmentProcessor.h  GroupCreationMessageAcknowledgmentProcessor.cpp  GroupCreationMessageAcknowledgmentProcessor.h
src/backup/: BackupObject.cpp  BackupObject.h  BackupReader.cpp  BackupReader.h  ContactBackupObject.cpp  ContactBackupObject.h  ContactMediaItemBackupObject.cpp  ContactMediaItemBackupObject.h  ContactMessageBackupObject.cpp  ContactMessageBackupObject.h  ContactThumbnailMediaItemBackupObject.cpp  ContactThumbnailMediaItemBackupObject.h  FileReader.cpp  FileReader.h  GroupAvatarMediaItemBackupObject.cpp  GroupAvatarMediaItemBackupObject.h  GroupBackupObject.cpp  GroupBackupObject.h  GroupMediaItemBackupObject.cpp  GroupMediaItemBackupObject.h  GroupMessageBackupObject.cpp  GroupMessageBackupObject.h  GroupThumbnailMediaItemBackupObject.cpp  GroupThumbnailMediaItemBackupObject.h  IdentityBackup.cpp  IdentityBackup.h  IdentityBackupObject.cpp  IdentityBackupObject.h  MediaFileReader.cpp  MediaFileReader.h  MediaItemBackupObject.cpp  MediaItemBackupObject.h  SafeBackup.cpp  SafeBackup.h  SimpleCsvLineSplitter.cpp  SimpleCsvLineSplitter.h  UuidMediaItemBackupObject.cpp  UuidMediaItemBackupObject.h
src/c-interface/: openmittsu.h
src/crypto/: BasicCryptoBox.cpp  BasicCryptoBox.h  Crc32.cpp  Crc32.h  EncryptionKey.cpp  EncryptionKey.h  FixedNonces.cpp  FixedNonces.h  FullCryptoBox.cpp  FullCryptoBox.h  Key.h  KeyPair.cpp  KeyPair.h  Nonce.cpp  Nonce.h  NonceGenerator.cpp  NonceGenerator.h  PublicKey.cpp  PublicKey.h  SafeMasterKey.cpp  SafeMasterKey.h  pbkdf2-sha256.cpp  pbkdf2-sha256.h
src/database/: ContactData.h  ContactMessageCursor.cpp  ContactMessageCursor.h  Database.cpp  Database.h  DatabaseContactAndGroupDataProvider.cpp  DatabaseContactAndGroupDataProvider.h  DatabaseContactMessage.cpp  DatabaseContactMessage.h  DatabaseContactMessageCursor.cpp  DatabaseContactMessageCursor.h  DatabaseControlMessage.cpp  DatabaseControlMessage.h  DatabaseGroupMessage.cpp  DatabaseGroupMessage.h  DatabaseGroupMessageCursor.cpp  DatabaseGroupMessageCursor.h  DatabaseMessage.cpp  DatabaseMessage.h  DatabaseMessageCursor.cpp  DatabaseMessageCursor.h  DatabasePointerAuthority.cpp  DatabasePointerAuthority.h  DatabaseReadonlyContactMessage.cpp  DatabaseReadonlyContactMessage.h  DatabaseReadonlyGroupMessage.cpp  DatabaseReadonlyGroupMessage.h  DatabaseReadonlyMessage.cpp  DatabaseReadonlyMessage.h  DatabaseReadonlyUserMessage.cpp  DatabaseReadonlyUserMessage.h  DatabaseSeekResult.h  DatabaseThreadWorker.cpp  DatabaseThreadWorker.h  DatabaseUniqueMessageIdGenerator.cpp  DatabaseUniqueMessageIdGenerator.h  DatabaseUserMessage.cpp  DatabaseUserMessage.h  DatabaseUtilities.cpp  DatabaseUtilities.h  (+17 more)
src/dataproviders/: BackedContact.cpp  BackedContact.h  BackedContactAndGroupPool.cpp  BackedContactAndGroupPool.h  BackedContactFactory.h  BackedContactMessage.cpp  BackedContactMessage.h  BackedGroup.cpp  BackedGroup.h  BackedGroupMessage.cpp  BackedGroupMessage.h  BackedMessage.cpp  BackedMessage.h  ContactDataProvider.h  DatabaseContactAndGroupDataProvider.cpp  DatabaseContactAndGroupDataProvider.h  DatabaseContactDataProvider.cpp.del  DatabaseContactDataProvider.h.del  DatabaseGroupDataProvider.cpp.del  DatabaseGroupDataProvider.h.del  GroupCreationProcessor.h  GroupDataProvider.h  KeyRegistry.cpp  KeyRegistry.h  MessageCenter.cpp  MessageCenter.h  MessageCenterPointerAuthority.cpp  MessageCenterPointerAuthority.h  MessageCenterThreadWorker.cpp  MessageCenterThreadWorker.h  MessageCenterWrapper.cpp  MessageCenterWrapper.h  MessageCenterWrapperFactory.cpp  MessageCenterWrapperFactory.h  MessageQueue.cpp  MessageQueue.h  MessageSource.h  MessageStorage.h  NetworkSentMessageAcceptor.cpp  NetworkSentMessageAcceptor.h  (+6 more)
src/dialogs/: ContactAddDialog.cpp  ContactAddDialog.h  ContactEditDialog.cpp  ContactEditDialog.h  ContactEditDialog.ui  FingerprintDialog.cpp  FingerprintDialog.h  LicenseDialog.cpp  LicenseDialog.h  LicenseDialog.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  ShowIdentityAndPublicKeyDialog.cpp  ShowIdentityAndPublicKeyDialog.h  UpdaterDialog.cpp  (+6 more)
travis/: bintray.json  build.sh  buildAppImage.sh  installDependencies.sh  runTests.sh
(+586 files in other folders)
